--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,7 +151,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-AndroidProjectTest.TimeStamp=2023.01.03-16.46.36
+AndroidProjectTest.TimeStamp=2023.01.06-05.06.31
 AndroidProjectTest.LastCompileMethod=Runtime
 PakFile.TimeStamp=2022.11.25-11.28.10
 PakFile.LastCompileMethod=Unknown
@@ -1045,7 +1045,7 @@ ExternalImagePicker.TimeStamp=2022.11.25-11.28.01
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
