--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,7 +151,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-AndroidProjectTest.TimeStamp=2023.01.06-05.06.31
+AndroidProjectTest.TimeStamp=2023.01.07-18.10.54
 AndroidProjectTest.LastCompileMethod=Runtime
 PakFile.TimeStamp=2022.11.25-11.28.10
 PakFile.LastCompileMethod=Unknown
@@ -1045,7 +1045,7 @@ ExternalImagePicker.TimeStamp=2022.11.25-11.28.01
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -1341,4 +1341,7 @@ CryptoKeysSettings=True
 GeneralProjectSettings=True
 AndroidRuntimeSettings=True
 AndroidSDKSettings=True
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
 
