--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,6 +146,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonCPP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
@@ -1043,9 +1044,12 @@ MovieSceneCapture.TimeStamp=2022.11.25-11.28.08
 MovieSceneCapture.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.11.25-11.28.01
 ExternalImagePicker.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.11.25-11.27.51
+BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -1066,7 +1070,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/nikol/Documents/Unreal Projects/AndroidProjectTest/Content/
+UNR=../../../../../../Users/nikol/Documents/Unreal Projects/AndroidProjectTest/Content/ThirdPersonCPP/Maps
 BRUSH=../../../../../../Users/nikol/Documents/Unreal Projects/AndroidProjectTest/Content/
 FBX=../../../../../../Users/nikol/Documents/Unreal Projects/AndroidProjectTest/Content/
 FBXAnim=../../../../../../Users/nikol/Documents/Unreal Projects/AndroidProjectTest/Content/
@@ -1335,6 +1339,90 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.CameraSettings=True
+ThirdPersonCharacter_C.CameraOptions=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.CameraCollision=True
+ThirdPersonCharacter_C.Lag=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.SkinWeights=True
+ThirdPersonCharacter_C.PostProcess=True
+ThirdPersonCharacter_C.Lens=True
+ThirdPersonCharacter_C.Color Grading=True
+ThirdPersonCharacter_C.Rendering Features=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.MasterPoseComponent=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.VirtualTexture=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.ComponentTick=True
+ThirdPersonCharacter_C.ComponentReplication=True
+ThirdPersonCharacter_C.Variable=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
+ThirdPersonCharacter_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1344,4 +1432,49 @@ AndroidSDKSettings=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
+
+[MRU]
+MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+
+[ContentBrowserRecent]
+MRUItem0=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 
